Actualizat index.html/css

--- a/index.html
+++ b/index.html
@@ -42,23 +42,30 @@ Fie că îți dorești aventuri în natură, explorări culturale sau escapade u
     <section class="destinations">
       <div>
       <h2 id="destinatii">Destinații</h2>
-      <div>
+      <div >
         <article>
         <div>
           <h3><a href="">Italia de Nord</a></h3>
           <p>Italia de Nord este o lume a eleganței și rafinamentului, unde istoria întâlnește modernitatea în armonie perfectă. Aici, munții semeți se întâlnesc cu lacuri cristaline, iar peisajele naturale sunt completate de orașe vibrante, pline de artă, cultură și tradiții. Atmosfera este dominată de stilul sofisticat, gastronomia rafinată și peisajele pitorești care îți încântă privirea la fiecare pas.</p>
-          <div>
-            <ol>
-              <li><strong><img src="./images/Milano.jpg">Milano</strong> - Un centru vibrant unde moda și arhitectura își dau mâna, oferind o experiență urbană plină de energie și eleganță.</img></li>
-              <li><strong>Torino</strong> - Un oraș cu aer nobil, unde palate istorice și colecții muzeale îți povestesc despre un trecut glorios.</li>
-              <li><strong>Verona</strong> - Ooraș romantic și plin de farmec, cu ruine antice care încă păstrează misterul legendelor de dragoste.</li>
-              <li><strong>Lacul Como</strong> - Un refugiu idilic, cu ape limpezi și peisaje montane ce par pictate, perfect pentru relaxare și contemplare.</li>
-              <li><strong>Cinque Terre</strong> - Un colț de coastă plin de culoare și viață, cu cărări pitorești ce leagă sate ce par suspendate între cer și mare..</li>
-              <li><strong>Dolomiții</strong> - Munți falnici cu vârfuri ascuțite, un adevărat teren de joacă pentru cei pasionați de natură și aventură.</li>
-              <li><strong>Bolzano</strong> - Un oraș unde influențele culturale se împletesc natural, amplasat în inima munților, cu aer proaspăt și istorie bogată.</li>
-                <li><strong>Genova</strong> - Port vechi cu o rețea de străzi fascinante, ce reflectă spiritul maritim și tradițiile mediteraneene.</li>
-                <li><strong>Bergamo</strong> - Un oraș încântător, cu un centru istoric ce se păstrează neatins, înconjurat de ziduri ce spun povești din alte vremuri.</li>
-            </ol>
+          <div class="destinations-gallery">
+              <img src="./images/Milano.jpg" alt="Milano"> 
+              <p><strong>Milano</strong> - Un centru vibrant unde moda și arhitectura își dau mâna, oferind o experiență urbană plină de energie și eleganță.</p>
+              <img src="./images/Torino.jpg" alt="Torino">
+              <p><strong>Torino</strong> - Un oraș cu aer nobil, unde palate istorice și colecții muzeale îți povestesc despre un trecut glorios.</p> 
+              <img src="./images/Verona.jpg" alt="Verona">
+              <p><strong>Verona</strong> - Ooraș romantic și plin de farmec, cu ruine antice care încă păstrează misterul legendelor de dragoste.</p>
+              <img src="./images/Lacul Como.jpg" alt="Lacul Como">
+              <p><strong>Lacul Como</strong> - Un refugiu idilic, cu ape limpezi și peisaje montane ce par pictate, perfect pentru relaxare și contemplare.</p>
+              <img src="./images/Cinque Terre.jpg" alt="Cinque Terre">
+              <p><strong>Cinque Terre</strong> - Un colț de coastă plin de culoare și viață, cu cărări pitorești ce leagă sate ce par suspendate între cer și mare..</p>
+              <img src="./images/Dolomiții.jpg" alt="Dolomiti">
+              <p><strong>Dolomiții</strong> - Munți falnici cu vârfuri ascuțite, un adevărat teren de joacă pentru cei pasionați de natură și aventură.</p>
+              <img src="./images/Bolzano.jpg" alt="Bolzano">
+              <p><strong>Bolzano</strong> - Un oraș unde influențele culturale se împletesc natural, amplasat în inima munților, cu aer proaspăt și istorie bogată.</p>
+              <img src="./images/Genova.jpg" alt="Genova">
+              <p><strong>Genova</strong> - Port vechi cu o rețea de străzi fascinante, ce reflectă spiritul maritim și tradițiile mediteraneene.</p>
+              <img src="./images/Bergamo.jpg" alt="Bergamo">
+              <p><strong>Bergamo</strong> - Un oraș încântător, cu un centru istoric ce se păstrează neatins, înconjurat de ziduri ce spun povești din alte vremuri.</p>
           </div>
           <div>
                <a href="" target="_self" class="link">
@@ -86,16 +93,23 @@ Fie că îți dorești aventuri în natură, explorări culturale sau escapade u
         <div>
           <h3><a href="">Italia Centrală</a></h3>
           <p>Inima Italiei pulsează în această regiune încărcată de artă și patrimoniu cultural. Tărâmul este o poveste vie a trecutului glorios, cu peisaje variate ce cuprind dealuri blânde, câmpii fertile și râuri ce șerpuiesc printre văi. Este locul unde spiritualitatea, cultura și natura se întâlnesc pentru a crea o experiență profundă și memorabilă, ce îți îmbogățește sufletul și mintea.</p>
-          <div>
-        <ol>
-          <li><strong>Roma</strong> - Orașul etern care îmbină ruinele antice cu viața modernă vibrantă, plin de piețe animate și monumente care spun povești milenare.</li>
-          <li><strong>Florenta
-</strong> - Un muzeu în aer liber, unde fiecare colț ascunde capodopere renascentiste și străzi care respiră artă și istorie.</li>
-          <li><strong>Pisa</strong> - Un simbol al curajului arhitectural, cu faimosul său turn care sfidează gravitația și o piață plină de farmec.</li>
-          <li><strong>Siena</strong> - Un oraș medieval care păstrează vie tradiția și spiritul comunității în fiecare piatră a pieței sale centrale.</li>
-          <li><strong>Assisi</strong> - Locul unde spiritualitatea este palpabilă, cu biserici și monumente ce inspiră pace și reflecție.</li>
-          <li><strong>Perugia</strong> - Un amestec vibrant de cultură și istorie, cu străzi pietruite care pulsează de viață și evenimente artistice.</li>
-          <li><strong>Orvieto</strong> - Oraș construit pe stâncă, cu o catedrală gotică impresionantă ce domină peisajul și te îndeamnă la explorare.</li>
+          <div class="destinations-gallery">
+            <img src="./images/">
+          <p><strong>Roma</strong> - Orașul etern care îmbină ruinele antice cu viața modernă vibrantă, plin de piețe animate și monumente care spun povești milenare.</p>
+          <Img src="./images/Florence.jpg" alt="Florenta">
+          <P><strong>Florenta
+</strong> - Un muzeu în aer liber, unde fiecare colț ascunde capodopere renascentiste și străzi care respiră artă și istorie.</P>
+          <img src="./images/Pisa.jpg" alt="Pisa">
+          <P><strong>Pisa</strong> - Un simbol al curajului arhitectural, cu faimosul său turn care sfidează gravitația și o piață plină de farmec.</P>
+          <img src="./images/Siena.jpg" alt="Siena">
+          <P><strong>Siena</strong> - Un oraș medieval care păstrează vie tradiția și spiritul comunității în fiecare piatră a pieței sale centrale.</P>
+          <img src="./images/Assisi.jpg" alt="Assisi">
+          <p><strong>Assisi</strong> - Locul unde spiritualitatea este palpabilă, cu biserici și monumente ce inspiră pace și reflecție.</p>
+          <img src="./images/Perugia.jpg" alt="Perugia">
+          <p><strong>Perugia</strong> - Un amestec vibrant de cultură și istorie, cu străzi pietruite care pulsează de viață și evenimente artistice.</p>
+          <img src="./images/Orvieto.jpg" alt="Orvieto">
+          <p><strong>Orvieto</strong> - Oraș construit pe stâncă, cu o catedrală gotică impresionantă ce domină peisajul și te îndeamnă la explorare.</p>
+          <img src ="./images/Lucca.jpg" alt="Lucca">
           <li><strong>Lucca</strong> - Un oraș cochet înconjurat de ziduri vechi, unde timpul pare să fi stat în loc și fiecare stradă te invită la plimbări relaxante.</li>
         </ol>
 
@@ -127,21 +141,28 @@ Fie că îți dorești aventuri în natură, explorări culturale sau escapade u
         <article>
         <div>
            <h3><a href="">Italia de Sud</a></h3>
-           <p>Italia de Sud și Insulele sunt un colț de lume plin de pasiune, culoare și contrast. Aici, marea întâlnește muntele în peisaje dramatice, iar atmosfera este încărcată de tradiții autentice și o energie caldă, primitoare. Fiecare apus pare pictat, iar gusturile locale și aromele mediteraneene te îmbie la descoperiri culinare savuroase. Este un loc al poveștilor vechi, al legendei și al peisajelor ce rămân pentru totdeauna în inimă.
+           <p>Italia de Sud este un colț de lume plin de pasiune, culoare și contrast. Aici, marea întâlnește muntele în peisaje dramatice, iar atmosfera este încărcată de tradiții autentice și o energie caldă, primitoare. Fiecare apus pare pictat, iar gusturile locale și aromele mediteraneene te îmbie la descoperiri culinare savuroase. Este un loc al poveștilor vechi, al legendei și al peisajelor ce rămân pentru totdeauna în inimă.
 
 </p>
-<div>
-  <ol>
-    <li><strong>Napoli</strong> - Un oraș plin de energie, unde tradițiile autentice se împletesc cu peisajele dramatice ale coastelor mediteraneene.</li>
-     <li><strong>Pompei</strong> - Un martor tăcut al trecutului, cu ruine ce dezvăluie detalii fascinante despre viața în Roma antică.</li>
-      <li><strong>Coasta Amalfi</strong> - Un peisaj de poveste, cu stânci abrupte și sate colorate ce cad spre marea limpede, oferind priveliști spectaculoase.</li>
-       <li><strong>Capri</strong> - Un paradis insular, cu golfuri ascunse și o atmosferă luxoasă, perfect pentru momente de relaxare și explorare.</li>
-        <li><strong>Matera</strong> - Un loc unic, cu case săpate în piatră, care spun povestea unei civilizații vechi și a unei arhitecturi spectaculoase.</li>
-         <li><strong> Lecce </strong> - Un oraș plin de viață, renumit pentru arhitectura barocă ce îi conferă farmec și eleganță aparte.</li>
-          <li><strong>Bari</strong> - Un port istoric, cu o atmosferă autentică, plaje liniștite și străzi pline de culoare și tradiție.</li>
-           <li><strong>Taranto</strong> - Un oraș cu rădăcini antice, unde istoria greco-romană se îmbină cu frumusețea naturală a zonei.</li>
-            <li><strong>Reggio Calabria</strong> - Poarta către insulele mediteraneene, cu peisaje spectaculoase și o cultură bogată.</li> 
-  </ol>
+<div class="destinations-gallery">
+  <img src="./images/Napoli.jpg" alt="Napoli">
+    <p><strong>Napoli</strong> - Un oraș plin de energie, unde tradițiile autentice se împletesc cu peisajele dramatice ale coastelor mediteraneene.</p>
+    <img src="./images/Pompei.jpg" alt="Pompei">
+     <p><strong>Pompei</strong> - Un martor tăcut al trecutului, cu ruine ce dezvăluie detalii fascinante despre viața în Roma antică.</p>
+     <img src="./images/Coasta Amalfi.jpg" alt="Coasta Amalfi">
+      <p><strong>Coasta Amalfi</strong> - Un peisaj de poveste, cu stânci abrupte și sate colorate ce cad spre marea limpede, oferind priveliști spectaculoase.</p>
+        <img src="./images/Capri.jpg" alt="Capri">
+         <p><strong>Capri</strong> - Un paradis insular, cu golfuri ascunse și o atmosferă luxoasă, perfect pentru momente de relaxare și explorare.</p>
+          <img src="./images/Matera.jpg" alt="Matera">
+           <p><strong>Matera</strong> - Un loc unic, cu case săpate în piatră, care spun povestea unei civilizații vechi și a unei arhitecturi spectaculoase.</p>
+          <img src="./images/Lecce.jpg" alt="Lecce">
+          <p><strong> Lecce </strong> - Un oraș plin de viață, renumit pentru arhitectura barocă ce îi conferă farmec și eleganță aparte.</p>
+            <img src="./images/Bari.jpg" alt="Bari">
+            <p><strong>Bari</strong> - Un port istoric, cu o atmosferă autentică, plaje liniștite și străzi pline de culoare și tradiție.</p>
+            <img src="./images/Taranto.jpg" alt="Taranto">
+            <p><strong>Taranto</strong> - Un oraș cu rădăcini antice, unde istoria greco-romană se îmbină cu frumusețea naturală a zonei.</p>
+              <img src="./images/Reggio Calabria.jpg" alt="Reggio Calabria">
+              <p><strong>Reggio Calabria</strong> - Poarta către insulele mediteraneene, cu peisaje spectaculoase și o cultură bogată.</p>       
 </div>
   <div>
                <a href="" target="_self" class="link">
@@ -169,11 +190,11 @@ Fie că îți dorești aventuri în natură, explorări culturale sau escapade u
       <div>
         <h3><a href="">Insulele Italiei</a></h3>
       <p>Insulele Italiei - un arhipelag de vis, unde natura și cultura se împletesc într-o simfonie de frumusețe și tradiție. De la plajele cu nisip fin și ape turcoaz, până la orașele istorice ce păstrează amprenta civilizațiilor trecute, fiecare insulă are propria poveste de spus. Este un loc unde timpul pare să stea în loc, iar fiecare zi aduce noi descoperiri și momente de neuitat.</p>
-      <div>
-        <ol>
-          <li><strong>Sicilia</strong> - O insulă de contraste, unde vulcanii activi și plajele aurii coexistă cu orașe istorice pline de viață și situri arheologice impresionante.</li>
-          <li><strong>Sardinia</strong> - Un tărâm de plaje virgine și ape cristaline, cu o natură sălbatică și tradiții care dau farmec acestei insule magnifice.</li>
-        </ol>
+      <div class="destinations-gallery">
+        <img src="./images/Sicilia.jpg" alt="Sicilia">
+          <p><strong>Sicilia</strong> - O insulă de contraste, unde vulcanii activi și plajele aurii coexistă cu orașe istorice pline de viață și situri arheologice impresionante.</p>
+          <img src="./images/Sardinia.jpg" alt="Sardinia">
+          <p><strong>Sardinia</strong> - Un tărâm de plaje virgine și ape cristaline, cu o natură sălbatică și tradiții care dau farmec acestei insule magnifice.</p>
       </div>
       <div>
         <h3><a href="">Vatican</a></h3>
@@ -186,12 +207,16 @@ Fie că îți dorești aventuri în natură, explorări culturale sau escapade u
         </div>
           <section>
         <div>
-           <h2>🌍 Harta </h2>
+        <h2>🌍 Harta </h2>
 </div>
-<div>
-<iframe src="https://nominatim.openstreetmap.org/ui/reverse.html?lat=41.54&lon=12.29&zoom=3" width="1200" height="1200">
-</iframe>
-</div>
+<div id="map" style="height:500px;"></div>
+<script>
+  var map = L.map('map').setView([41.54, 12.29], 6);
+  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    maxZoom: 19,
+  }).addTo(map);
+</script>
+
       </section>
      <!-- Contact form -->
       <section>
