--- a/Login.html
+++ b/Login.html
@@ -1,69 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link
+      href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./CSS/login.css">
+    <link rel="stylesheet" href="./CSS/global.css">
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-        <link
-            href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css"
-            rel="stylesheet"
-        />
-        <link rel="stylesheet" href="./CSS/global.css">
+  <title>Messenger</title>
+</head>
+<body>
+  <main>
+<div id="bg-container">
+  <img src="./images/Login.jpg" 
+  alt="Sign In">
+<div id ="overlay">
 
-        <title>Login Ghid Turistic</title>
-    </head>
+</div>
+</div>
+<div id="form-container">
+  <form>
+    <h1>Let's Sign In</h1>
+    <div class="form-row">
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" required placeholder="example@gmail.com">
+    </div>
+    <div class="form-row">
+      <label for="password">Password</label>
+      <input type="password" id="password" name="password" required placeholder="" >
+    </div>
+    <div id="submit-btn-container">
+       <button type="submit" class="btn-primary btn-full">Sign In</button>
+    </div>
+     </form>
+  <div id="form-footer">   <p>Don't have an account? <a href="./register.html" class="link-primary">Register</a></p>
+  </div>
 
-    <body>
-        <main>
-            <div id="left">
-                <div id="form-container">
-                    <div>
-                        <h1>Let’s Sign In</h1>
-                    </div>
-                    
-                    <form onsubmit="loginHandler(event)">
-                        <div class="form-row">
-                            <label for="email">Email Address</label>
-                            <input
-                                required
-                                type="email"
-                                name="email"
-                                placeholder="Insert your email"
-                            >
-                        </div>
+</div>
 
-                        <div class="form-row">
-                            <label for="password">Password</label>
-                            <input
-                                required
-                                type="password"
-                                name="password"
-                                placeholder="Insert your password"
-                            >
-                        </div>
 
-                        <input type="submit" value="Sign In" class="auth-button btn-full">
-                    </form>
-
-                    <div>
-                        <p class="sub-form-paragraph paragraph-l">
-                            Don't have an account?
-                            <a href="./register.html">Register</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-            <div id="right">
-                <img src="./images/Login.jpg" alt="">
-            </div>
-        </main>
-
-        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-        <script src="./scripts/login.js"></script>
-    </body>
+  </main>
+  
+</body>
 </html>
